--- a/blocks/photo-grid.css
+++ b/blocks/photo-grid.css
@@ -4,9 +4,77 @@
   margin: 0 auto 92px;
 }
 
-.photo-grid__gallery{
+.photo-grid__gallery {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-row: 2;
   gap: 10px;
+}
+
+.photo-grid__item {
+  width: 100%;
+}
+
+/*Media query pantallas menores a 1280 px*/
+@media screen and (max-width: 1280px) {
+  .photo-grid {
+    max-width: 1184px;
+    max-height: 442px;
+    margin: 0 auto 92px;
+  }
+
+  .photo-grid__gallery {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-row: 2;
+    gap: 10px;
+  }
+
+  .place__image {
+    margin: 0 auto;
+  }
+}
+
+/*Media query pantallas menores a 768 px*/
+@media screen and (max-width: 768px) {
+  .photo-grid {
+    max-width: 720px;
+    max-height: 1104px;
+    margin: 0 auto 88px;
+  }
+
+  .photo-grid__gallery {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row: 4;
+    gap: 10px;
+  }
+
+  /* .photo-grid__gallery img {
+    margin: 0 auto;
+  } */
+
+  /* .photo-grid__item-one {
+     margin: 0 auto;
+  }
+
+    .photo-grid__item-two {
+     margin: 0 auto;
+  } */
+}
+
+/*Media query pantallas menores a 320 px*/
+@media screen and (max-width: 320px) {
+  .photo-grid {
+    max-width: 288px;
+    max-height: 1812px;
+    margin: 0 auto 62px;
+  }
+
+  .photo-grid__gallery {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(8, 1fr);
+    gap: 10px;
+  }
 }
