--- a/blocks/places.css
+++ b/blocks/places.css
@@ -1,36 +1,43 @@
-.places{
+.places {
   margin: 0 auto 90px;
   max-width: 987px;
-  max-height: 3367px;
+  /*max-height: 3367px;*/
+  font-weight: 400;
 }
 
 .place {
+  width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 3fr;
-  row-gap: 15px;
+  row-gap: 48px;
+  column-gap: 37px;
   margin-bottom: 80px;
 }
 
+.place__image {
+  width: 100%;
+}
 .place__text {
   margin: 0;
+  grid-column: 2;
+  grid-row: 2 / span 3;
 }
 
 .place__title {
   font-size: 72px;
   line-height: 0.76;
   font-weight: 900;
-  width: 460px;
-  height: 152px;
+  max-width: 460px;
+  max-height: 152px;
   margin: 0;
 }
 
-.place__artist-title{
+.place__artist-title {
   font-size: 12px;
   font-weight: 400;
-  line-height: 1;
   letter-spacing: 0.12px;
-  color: #AAAAAA;
+  color: #aaaaaa;
 }
 
 .place__artist-info {
@@ -44,20 +51,21 @@
 .place__artist-author {
   line-height: 0.22;
   font-size: 18px;
+  text-wrap-mode: wrap;
 }
 
 .place__paragraph {
   font-size: 18px;
-  font-weight: 400px;
+  font-weight: 400;
   line-height: 1.63;
   letter-spacing: 0;
   margin: 0;
 }
 
 .place__purchase-link {
-  width: 269px;
+  width: 288px;
   height: 48px;
-  background: linear-gradient(90deg, #0278FE 0%, #003A7B 100%);
+  background: linear-gradient(90deg, #0278fe 0%, #003a7b 100%);
   text-align: center;
   display: flex;
   align-items: center;
@@ -67,9 +75,138 @@
 .place__purchase-link-text {
   color: white;
   font-size: 18px;
-  line-height: 1;
   letter-spacing: 0px;
   font-weight: 600;
   text-decoration: none;
+}
 
+/*Media query pantallas menores a 1280 px*/
+@media screen and (max-width: 1280px) {
+  .places {
+    margin: 0 auto 90px;
+    max-width: 987px;
+  }
+
+  .place {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 3fr;
+    row-gap: 48px;
+    column-gap: 37px;
+    margin-bottom: 80px;
+    width: 100%;
+  }
+
+  .place__text {
+    margin: 0;
+    grid-column: 2;
+    grid-row: 2 / span 3;
+  }
+
+  .place__title {
+    font-size: 72px;
+    line-height: 0.76;
+    font-weight: 900;
+    max-width: 460px;
+    max-height: 152px;
+  }
+
+  .place__artist-title {
+    font-size: 12px;
+    font-weight: 400;
+    letter-spacing: 0.12px;
+  }
+
+  .place__artist-info {
+    max-width: 456px;
+    max-height: 67px;
+  }
+
+  .place__artist-author {
+    line-height: 0.22;
+  }
+
+  .place__paragraph {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.63;
+    letter-spacing: 0;
+  }
+}
+
+/*Media query pantallas menores a 768 px*/
+@media screen and (max-width: 768px) {
+  .places {
+    max-width: 720px;
+  }
+  .place {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 3fr;
+    column-gap: 28px;
+    margin-bottom: 72px;
+  }
+  .place__text {
+    margin: 0;
+    grid-column: 2;
+    grid-row: 2 / span 3;
+  }
+
+  .place__title {
+    font-size: 42px;
+    line-height: 0.76;
+    font-weight: 900;
+    max-width: 340px;
+    max-height: 46px;
+  }
+
+  .place__artist-info {
+    max-width: 352px;
+  }
+
+  .place__paragraph {
+    font-size: 16px;
+  }
+}
+
+/*Media query pantallas menores a 320 px*/
+@media screen and (max-width: 320px) {
+  .places {
+    margin: 0 auto 65px;
+    max-width: 320px;
+  }
+
+  .place {
+    grid-template-columns: 1fr;
+    grid-template-rows: 5fr;
+    row-gap: 30px;
+    margin-bottom: 50px;
+  }
+
+  .place__text {
+    margin: 0;
+    grid-column: 1;
+    grid-row: 4;
+  }
+
+  .place__title {
+    font-size: 22px; /*original 32px*/
+    line-height: 0.35;
+    grid-column: 1;
+    grid-row: 1;
+  }
+  .place__artist-author {
+    line-height: 0.22;
+    grid-column: 1;
+    grid-row: 2;
+  }
+  .place__image {
+    grid-column: 1;
+    grid-row: 3;
+  }
+  .place__paragraph {
+    font-size: 16px;
+  }
+  .place__purchase-link {
+    grid-column: 1;
+    grid-row: 5;
+  }
 }
